# disk-space-analyze

./: .gitignore  LICENSE  README.md  README.zh-CN.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: disk-scan.toml
src-tauri/src/: main.rs
ui/: app.js  index.html  styles.css
