[package]
name = "disk-space-analyze"
version = "0.1.0"
description = "A Tauri 2 disk space visual analyzer"
authors = ["local"]
edition = "2021"
license = "GPL-3.0-only"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tauri = { version = "2", features = [] }
trash = "5"
